Add missing screenshot

--- a/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
@@ -8,8 +8,8 @@ files while providing the benefits of a central prompt library.
 
 Opik supports two types of prompts:
 
-- **Text Prompts**: Simple string-based prompts with variable substitution
-- **Chat Prompts**: Structured message-based prompts in OpenAI format for conversational AI applications, supporting multimodal content (text, images, videos)
+- [**Text Prompts**](#text-prompts): Simple string-based prompts with variable substitution
+- [**Chat Prompts**](#chat-prompts): Structured message-based prompts in OpenAI format for conversational AI applications, supporting multimodal content (text, images, videos)
 
 ## Text Prompts
 
